--- a/Projects/TodoList-App/views/list.ejs
+++ b/Projects/TodoList-App/views/list.ejs
@@ -1,17 +1,20 @@
-
-<%- include('header') -%> 
+<%- include('header') -%>
 
 <div class="box" id="heading">
     <h1><%= listTitle %></h1>
 </div>
 
 <div class="box">
-    <% for (var i=0; i<items.length; i++) { %>
-    <div class="item">
-        <input type="checkbox">
-        <p><%= items[i] %></p>
-    </div>
-    <% } %>
+
+    <% items.forEach((item) => { %>
+    <form action="/delete" method="post">
+        <div class="item">
+            <input type="hidden" name="listTitle" value="<%= listTitle %>">
+            <input type="checkbox" name="checkbox" value="<%= item._id %>" onchange="this.form.submit()">
+            <p><%= item.name %></p>
+        </div>
+    </form>
+    <% }) %>
 
     <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="New List Item" autocomplete="off">
@@ -20,4 +23,4 @@
 
 </div>
 
-<%- include('footer') -%> 
+<%- include('footer') -%>
