--- a/Projects/Blog-Website/views/home.ejs
+++ b/Projects/Blog-Website/views/home.ejs
@@ -7,8 +7,12 @@
 <% posts.forEach((post) => { %>
     <h1><%=post.title %></h1>
     <p>
-        <%= post.content.substring(0, 100) + '...'%>
-        <a href="/posts/<%=post.title %>">Read More</a>
+        <% if (post.content.length > 100) { %>
+            <%= post.content.substring(0, 100) + '...'%>
+            <a href="/posts/<%=post._id%>">Read More</a>
+        <% } else { %>
+            <%=post.content%>
+        <% } %>
     </p>
 <% }) %> 
 
