--- a/Projects/Blog-Website/views/compose.ejs
+++ b/Projects/Blog-Website/views/compose.ejs
@@ -7,8 +7,8 @@
         <input class="form-control" type="text" id="post-title" name="postTitle" autocomplete="off">
     </div>
     <div class="form-group">
-        <label for="#post-body">Post</label>
-        <textarea class="form-control" name="postBody" id="post-body" rows="10"></textarea>
+        <label for="#post-content">Post</label>
+        <textarea class="form-control" name="postContent" id="post-content" rows="10"></textarea>
     </div>
 
     <button class="btn btn-primary" type="submit">Publish</button>
